--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>commcercial-management</title>
+    <title>Order Management App</title>
   </head>
   <body>
     <div id="app"></div>
